# rIRCd

./: .gitignore  Cargo.toml  README.md  default-config.toml  default-motd.txt
.github/workflows/: ci.yml  release.yml
distrib/: rircd.service
docs/: draft-auto-join.md  index.html
src/: capability.rs  channel.rs  client.rs  config.rs  filehost.rs  lib.rs  main.rs  persist.rs  server.rs  user.rs
src/commands/: channel_cmds.rs  messaging.rs  metadata.rs  mod.rs  query_cmds.rs  registration.rs  reply.rs  server_cmds.rs
src/protocol/: format.rs  message.rs  mod.rs  parser.rs
