[package]
name = "rircd"
version = "0.1.0"
edition = "2021"
description = "Bleeding-edge IRC server in Rust"
license = "MIT"
repository = "https://github.com/rircd/rircd"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = "0.22"
tokio-rustls = "0.26"
rustls-pemfile = "2"
bcrypt = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rpassword = "7"
anyhow = "1"
base64 = "0.22"
nix = { version = "0.29", features = ["signal", "process"] }
