[package]
name = "rircd"
version = "1.0.0"
edition = "2021"
description = "Bleeding-edge IRC server in Rust"
license = "MIT"
repository = "https://github.com/rircd/rircd"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
bcrypt = "0.17"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rpassword = "7"
anyhow = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
nix = { version = "0.29", features = ["signal", "process"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
mime_guess = "2"
